--- a/bicycle_msgs/CMakeLists.txt
+++ b/bicycle_msgs/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   BicycleCmd.msg
+  BicycleStates.msg
   joint_torque.msg
   joint_vel.msg
 )
